fix test compilation, add todo